# ChessEmulation

./: .gitignore  Build.bat  CMakeLists.txt  CMakePresets.json  ChessEmulation.sln  Config.bat
Dependencies/: CMakeLists.txt
Dependencies/SFML/: CMakeLists.txt
Source/: CMakeLists.txt  Main.cpp
Source/Application/: Application.cpp  Application.hpp  CMakeLists.txt
Source/Application/Scenes/: CMakeLists.txt  Scene.cpp  Scene.hpp
Source/Application/Scenes/Console/: ConsoleScene.cpp  ConsoleScene.hpp
Source/Application/Scenes/Game/: GameScene.cpp  GameScene.hpp
Source/Application/Scenes/Menu/: MenuScene.cpp  MenuScene.hpp
Source/Control/: CMakeLists.txt  Controller.cpp  Controller.hpp
Source/Control/Mouse/: MouseController.cpp  MouseController.hpp
Source/Control/MouseController/: MouseController.cpp  MouseController.hpp
Source/Graphic/: CMakeLists.txt
Source/Graphic/Controllable/: Controllable.cpp  Controllable.hpp
Source/Graphic/Drawable/: Drawable.cpp  Drawable.hpp
Source/Graphic/Intersectable/: Intersectable.cpp  Intersectable.hpp
Source/Graphic/Placable/: Placable.cpp  Placable.hpp  PositionLocation.hpp
Source/Graphic/Sprite/: Sprite.cpp  Sprite.hpp
Source/Graphic/TextureLoader/: TextureLoader.hpp
Source/Graphic/TextureLoader/FileTextureLoader/: FileTextureLoader.hpp
Source/Graphics/: Auxilary.hpp
Source/Logic/: Board.cpp  Board.hpp  CMakeLists.txt  Piece.cpp  Piece.hpp
Source/Logic/Board/: Board.cpp  Board.hpp  CMakeLists.txt
Source/Logic/Board/Cell/: BoardCell.cpp  BoardCell.hpp
Source/Logic/Board/Observer/: BoardObserver.cpp  BoardObserver.hpp
Source/Logic/Board/WalkThrougher/: WalkThrougher.cpp  WalkThrougher.hpp
Source/Logic/BoardElements/Board/: Board.cpp  Board.hpp
Source/Logic/BoardElements/BoardCell/: BoardCell.cpp  BoardCell.hpp
Source/Logic/Controllers/: Controller.hpp
Source/Logic/Controllers/MouseController/: MouseController.cpp  MouseController.hpp
Source/Logic/Creator/Cell/: CellCreator.cpp  CellCreator.hpp
Source/Logic/Creator/Consecutive/: ConsecutiveCreator.hpp
Source/Logic/Creator/Piece/: PieceCreator.cpp  PieceCreator.hpp
Source/Logic/GameProcessElements/GameMode/: GameMode.cpp  GameMode.hpp
Source/Logic/GameProcessElements/Match/: Match.cpp  Match.hpp
Source/Logic/Gameplay/: CMakeLists.txt
Source/Logic/Gameplay/BoardObserver/: BoardObserver.cpp  BoardObserver.hpp
Source/Logic/Gameplay/GameMode/: GameMode.cpp
Source/Logic/Gameplay/GameObserver/: GameObserver.cpp  GameObserver.hpp
Source/Logic/Gameplay/SideHolder/: PieceSideHolder.hpp
Source/Logic/Match/: CMakeLists.txt  Match.cpp  Match.hpp
Source/Logic/Match/Players/: Player.cpp  Player.hpp
Source/Logic/Move/: BasicMove.cpp  BasicMove.hpp  CMakeLists.txt
Source/Logic/Move/DefaultMove/: DefaultMove.hpp
Source/Logic/Piece/: Piece.cpp  Piece.hpp
Source/Math/: Core.hpp
Source/NewGraphics/Interactable/: Interactable.hpp
Source/NewGraphics/Placable/: Placable.cpp
Source/NewGraphics/Sprite/: Sprite.cpp  Sprite.hpp
Source/Old/Application/: Application.hpp  CMakeLists.txt
Source/Old/Control/: Controller.cpp  Controller.hpp
Source/Old/Graphic/: CMakeLists.txt
Source/Old/Math/: CMakeLists.txt  VectorOperations.cpp  VectorOperations.hpp
Source/Old/NewGraphics/: CMakeLists.txt  Core.hpp
Source/Old/NewScene/: CMakeLists.txt  Scene.cpp  Scene.hpp
Source/Old/Spawn/: CMakeLists.txt
Source/Old/UI/: CMakeLists.txt
Source/Old/Utility/: Namespace.hpp
Source/Spawn/Associative/: AssociativeSpawner.hpp
Source/Spawn/BoardFileReader/: BoardFileReader.cpp  BoardFileReader.hpp
Source/Spawn/CellIndex/: BoardCellIndexSpawner.cpp  BoardCellIndexSpawner.hpp
Source/Spawn/Default/: DefaultSpawner.hpp
Source/Spawn/Scene/: SceneSpawner.hpp
Source/UI/Buttons/: Button.cpp  Button.hpp  CMakeLists.txt
(+168 files in other folders)
